# dagskra.rs

./: .editorconfig  .env  .gitignore  Cargo.toml
dagskra-lib/: Cargo.toml
dagskra-lib/src/: lib.rs
dagskra-web/: Cargo.toml
dagskra-web/src/: Cargo.toml  main.rs
dagskra-web/templates/: index.html  listing.html  show.html
src/: handler.rs  main.rs  show.rs  template.rs
src/handler/: show.rs
templates/: index.html  schedule.html  show.html
