[package]
edition = "2021"
name = "axum-ruv"
version = "0.1.1"

[dependencies]
askama = "0.11"
axum = "0.5"
axum-extra = {version = "0.3", features = ["spa"]}
chrono = "0.4"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}
tower-http = {version = "0.3", features = ["trace"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
