[package]
description = "Library support for dagskra-web"
edition = "2021"
name = "dagskra-lib"
version = "0.1.2"

[dependencies]
chrono = "^0.4.21"
reqwest = {version = "^0.11.11", features = ["json"]}
serde = {version = "^1.0.143", features = ["derive"]}
serde_json = "^1.0.83"
serde_with = "^2.0.0"
