[package]
description = "Library support for dagskra-web"
edition = "2021"
name = "dagskra-lib"
version = "0.1.2"

[dependencies]
chrono = "^0.4.22"
reqwest = {version = "^0.11.11", features = ["json"]}
serde = {version = "^1.0.144", features = ["derive"]}
serde_json = "^1.0.85"
serde_with = "^2.0.0"
