[package]
description = "dagskra-web web application"
edition = "2021"
name = "dagskra-web"
version = "0.2.0"

[dependencies]
askama = "0.11"
axum = "0.5"
chrono = "0.4"
dagskra-lib = {path = "../dagskra-lib", version = "0.1"}
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}
tower-http = {version = "0.3", features = ["trace"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
