[package]
description = "dagskra-web web application"
edition = "2021"
name = "dagskra-web"
version = "0.2.1"

[dependencies]
askama = "^0.11.1"
axum = "^0.5.13"
chrono = "^0.4.22"
dagskra-lib = {path = "../dagskra-lib", version = "0.1"}
reqwest = {version = "^0.11.11", features = ["json"]}
serde = {version = "^1.0.143", features = ["derive"]}
serde_json = "^1.0.83"
tokio = {version = "^1.20.1", features = ["full"]}
tower-http = {version = "^0.3.4", features = ["trace"]}
tracing = "^0.1.36"
tracing-subscriber = {version = "^0.3.15", features = ["env-filter"]}
