[package]
edition = "2021"
name = "dagskra-web"
version = "0.2.0"

[dependencies]
askama = "0.11"
axum = "0.5"
axum-extra = {version = "0.3", features = ["spa"]}
tokio = {version = "1", features = ["full"]}
tower-http = {version = "0.3", features = ["trace"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
